--- a/Capstone_III_UL.html
+++ b/Capstone_III_UL.html
@@ -39214,6 +39214,18 @@ YT5X9SRJAAAAAElFTkSuQmCC
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<p>Cluster Findings:
+Cluster3 (Successful Achievers): &gt; $5MM in funding, lower participants, lower funding rounds and high post money valuation
+Cluster5 (Underachievers): Lower post money valuation relative to total funding and low milestones reached
+Cluster6 (Solid Operators): Highest milestones reached, highest participation rate, and highest post money valuation
+Cluster0: (Cash Burners): Constant capital raising with low post money valuation</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="DBSCAN">DBSCAN<a class="anchor-link" href="#DBSCAN">&#182;</a></h2>
 </div>
 </div>
